<?xml version="1.0"?>
<package>
  <name>doa_ur</name>
  <version>0.0.1</version>
  <description>Manipulate a tf with an interactive marker</description>

  <maintainer email="sunyuansong@megvii.com">Sun Yuansong</maintainer>
  <license>BSD</license>
  <url type="website">http://github.com/lucasw/rviz_interactive_tf</url>

  <author>Sun Yuansong</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>interactive_markers</build_depend>
  <build_depend>visualization_msgs</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>interactive_markers</run_depend>
  <run_depend>visualization_msgs</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>geometry_msgs</run_depend>

</package>
